# assert_that

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
tests/: compile_fail.rs
tests/compile_fail/: leak_prelude.rs  leak_prelude.stderr
