[package]
name = "assert_that"
version = "0.1.1"
authors = ["Ian Chamberlain <ian.h.chamberlain@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ian-h-chamberlain/assert_that"
homepage = "https://github.com/ian-h-chamberlain/assert_that"

# TODO: finalize some metadata
# keywords = ["predicate", "boolean", "combinatorial", "match", "logic"]
# documentation = "https://docs.rs/assert_that"
# categories = ["data-structures", "rust-patterns"]

description = """
Helper macros for use with boolean-valued predicate functions.
"""

[dependencies]
predicates = "1.0"
predicates-tree = "1.0"
